# modern-cpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  build.sh  docker-build.sh  docker-entrypoint.sh  entrypoint.sh
.github/workflows/: docker.yml
src/: main.cpp
